syntax = "proto3";

package test;
option go_package="../test";

message LinkedList {
  int32 value = 1;
  LinkedList next = 10;
}