syntax = "proto3";

package test;
option go_package="../test";

import "test.proto";

message DependencyMessage {
    bool is_active = 1;
    TestMessage test_messsage = 2;
}
