syntax = "proto3";

package test;
option go_package="../test";

message NewerWidget {
    string name = 1;
    int32 length = 2;
    int32 version = 3;
}
